FEAT: 新增 writeWarning 和 writeError 接口
为日志工具增加 writeWarning 和 writeError 方法，分别用于输出警告和错误级别的日志。